--- a/album.html
+++ b/album.html
@@ -3,29 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Álbum</title>
+    <title>Albúm</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="custominicio.css">
     <style>
         .carousel-container {
-            max-width: 100%; /* Ajusta el ancho máximo al 100% del contenedor */
+            max-width: 800px;
+            max-height: 800px;
             margin: 50px auto;
             border-radius: 15px;
             overflow: hidden;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
         }
         .carousel-item img {
-            width: 100%; /* Asegura que la imagen se ajuste al contenedor */
-            height: auto; /* Mantiene la proporción de la imagen */
-            object-fit: cover; /* Ajusta el contenido de la imagen para cubrir el área del contenedor */
+            height: 800px;
+            object-fit:cover;
         }
         .carousel-caption {
             background-color: rgba(173, 216, 230, 0.7);
             border-radius: 10px;
             padding: 15px;
         }
-        .carousel-caption h5, .carousel-caption p {
+        .carousel-caption h5 {
+            color: #ffffff;
+            font-weight: bold;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+        }
+        .carousel-caption p {
             color: #ffffff;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
         }
@@ -34,16 +39,6 @@
             background-color: rgba(173, 216, 230, 0.7);
             border-radius: 50%;
             padding: 10px;
-        }
-        /* Consultas de medios para pantallas más pequeñas */
-        @media (max-width: 768px) {
-            .carousel-caption {
-                font-size: 0.8rem; /* Reduce el tamaño de fuente en pantallas pequeñas */
-            }
-            .carousel-control-prev-icon,
-            .carousel-control-next-icon {
-                padding: 8px; /* Reduce el tamaño de los iconos de control */
-            }
         }
     </style>
 </head>
@@ -63,7 +58,7 @@
                         <a href="sobrenosotros.html" class="nav-link" href="#"><i class="fas fa-heart nav-icon"></i>Sobre Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a href="album.html" class="nav-link" href="#"><i class="fas fa-photo-video nav-icon"></i>Nuestro Albúm</a>
+                        <a href="album.html" class="nav-link" href="#"><i class="fas fa-photo-video nav-icon"></i></i>Nuestro Albúm</a>
                     </li>
                     <li class="nav-item">
                         <a href="futuro.html" class="nav-link" href="#"><i class="fas fa-home nav-icon"></i>Nuestro Futuro</a>
@@ -88,43 +83,43 @@
                 <div class="carousel-item active">
                     <img src="1.png" class="d-block w-100" alt="Imagen 1">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Nuestra primera película</h5>
-                        <p>Si bien, no hemos visto muchas películas juntos, este recuerdo nunca se borrará de mi memoria.</p>
+                        <h5>Nuestra primera pelicula</h5>
+                        <p>Si bien, no hemos visto muchas peliculas juntos, este recuerdo nunca se borrará de mi memoria.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="2.png" class="d-block w-100" alt="Imagen 2">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>De mis primeros regalos</h5>
-                        <p>No sé si fue el primero exactamente, pero de lo que sí puedo estar seguro, era de lo nervioso que estaba pensando en si te iba a gustar o no :(</p>
+                        <p>FASJKAS, No se si fue el primero exactamente, pero de lo que si puedo estar seguro, era de lo nervioso que estaba pensando en que si te iba a gustar o no :(</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="3.png" class="d-block w-100" alt="Imagen 3">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Nuestra primera cena romántica lujosa</h5>
+                        <h5>Nuestra primera cena romantica lujosa</h5>
                         <p>Nada que decir, un lujo.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="4.png" class="d-block w-100" alt="Imagen 4">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>El día en que me encontré un lorito</h5>
-                        <p>Lo adopté inmediatamente.</p>
+                        <h5>El dia en que me encontre un lorito</h5>
+                        <p>Lo adopte inmediatamente.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="5.png" class="d-block w-100" alt="Imagen 5">
+                    <img src="5.png" class="d-block w-100" alt="Imagen 4">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>El día donde se nos ocurrió la misma "tontera"</h5>
+                        <h5>El dia donde se nos ocurrio la misma "tontera"</h5>
                         <p>Si amor, febrero.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="6.png" class="d-block w-100" alt="Imagen 6">
+                    <img src="6.png" class="d-block w-100" alt="Imagen 4">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>En lo personal, de mis fotos favoritas de nosotros.</h5>
-                        <p>Te amo y muchísimas gracias por acompañarme estos 5 meses corazón.</p>
+                        <h5>En lo personal, de mi fotos favoritas de nosotros.</h5>
+                        <p>Te amo y muchisimas gracias por acompañarme estos 5 meses corazón.</p>
                     </div>
                 </div>
             </div>
